--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/analytics.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/analytics.html
@@ -21,81 +21,124 @@
      id="predictions"
      role="tabpanel"
      aria-labelledby="profile-tab">
-    <div class="row">
-        <!-- Left -->
-        <div class="col-md-4"
-             style="text-align: right">
-            <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237096/demo-image/java.png"
-                 alt="Java"
-                 height="60"
-                 width="150"><br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et
-                dolore magna aliqua.
-            </p>
+
+    <div class="row justify-content-center text-center" style="font-size: 1.5em; font-style: italic">
+        Dự đoán trong 4 tháng tới<br/>
+        Các nhà tuyển dụng có thể sẽ tuyển thêm
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-md-3 text-center predict-major">
+            <div class="vertical-middle"
+                 id="position-prediction">
+                135 Project Manager
+            </div>
         </div>
-        <div class="col-md-2 text-center ">
-            <div class="statistic1">
-                <span style="color:rgb(235, 226, 226); font-size:5em">08</span><br>
-                <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty ABC</span><br><br><br><br>
+    </div>
+    <div class="row justify-content-center" style="font-size: 1.5em; font-style: italic">
+        Với nhu cầu cao ở các kỹ năng sau
+    </div>
+
+    <div id="top-skills">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="row justify-content-center">
+                    <div class="col-md-3 statistic1 text-center ">
+                        <img
+                                src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/nest.svg"
+                                alt="javascript"
+                                height="110"
+                                width="180"
+                        />
+                    </div>
+                    <div class="col-md-6 statistic-description text-center">
+                        <div class="vertical-middle">
+                            Artificial Intelligence
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="row  justify-content-center">
+                    <div class="col-md-3 statistic1 text-center">
+                        <img
+                                src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237096/demo-image/java.png"
+                                alt="javascript"
+                                height="110"
+                                width="180"
+                        />
+                    </div>
+                    <div class="col-md-6 statistic-description  text-center">
+                        <div class="vertical-middle "><b>NodeJS</b></div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <!-- Right -->
-        <div class="col-md-2 text-center ">
-            <div class="statistic2">
-                <span style="color:#ff6215; font-size:5em">08</span><br>
-                <span style="color:#ff6215; font-size:1.4em">Công ty XYZ</span><br><br><br><br>
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="row justify-content-center">
+                    <div class="col-md-3 statistic1 text-center ">
+                        <img
+                                src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/nest.svg"
+                                alt="javascript"
+                                height="110"
+                                width="180"
+                        />
+                    </div>
+                    <div class="col-md-6 statistic-description text-center">
+                        <div class="vertical-middle">
+                            Artificial Intelligence
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/nest.svg"
-                 alt="Nest"
-                 height="150"
-                 width="150"><br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et
-                dolore magna aliqua.
-            </p>
+            <div class="col-md-6">
+                <div class="row  justify-content-center">
+                    <div class="col-md-3 statistic1 text-center">
+                        <img
+                                src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237096/demo-image/java.png"
+                                alt="javascript"
+                                height="110"
+                                width="180"
+                        />
+                    </div>
+                    <div class="col-md-6 statistic-description  text-center">
+                        <div class="vertical-middle "><b>NodeJS</b></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-4"
-             style="text-align: right">
-            <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237097/demo-image/javascript.png"
-                 alt="javascript"
-                 height="150"
-                 width="150"><br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et
-                dolore magna aliqua.</p>
-
-        </div>
-        <div class="col-md-2 text-center ">
-            <div class="statistic1">
-                <span style="color:rgb(235, 226, 226); font-size:5em">05</span><br>
-                <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty Hải</span><br><br><br><br>
+    <!-- Advantages -->
+    <div class="col-md-9 top-3 top-left">
+        <div class="row justify-content-between">
+            <div class="col-md-5 my-auto pl-5">
+                <b style="color: white; font-size: 40px;font-style: italic">
+                    Có lợi thế nếu sỡ hữu thêm các kỹ năng sau
+                </b>
             </div>
-
-        </div>
-        <div class="col-md-2 text-center ">
-            <div class="statistic2">
-                <span style="color:rgb(235, 226, 226); font-size:5em">002</span><br>
-                <span style="color:#ff6215; font-size:1.4em">Công ty Fsoft</span><br><br><br><br>
+            <div id="advantages"
+                 class="col-md-6 row justify-content-around top-icons-left">
+                <div class="col-md-3 text-center"
+                     style="font-size: 1.1em; font-weight: bold">
+                    <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1540782968/skills/jquery.png"/>
+                    Jquery
+                </div>
+                <div class="col-md-3 text-center"
+                     style="font-size: 1.1em; font-weight: bold">
+                    <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1540782962/skills/dotnet.png"/>
+                    .NET
+                </div>
+                <div class="col-md-3 text-center"
+                     style="font-size: 1.1em; font-weight: bold">
+                    <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1540782975/skills/reactjs.png"/>
+                    ReactJS
+                </div>
             </div>
-
-        </div>
-        <div class="col-md-4">
-            <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237102/demo-image/node-js.png"
-                 alt="NodeJS"
-                 height="60"
-                 width="150"><br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et
-                dolore magna aliqua.</p>
         </div>
     </div>
+    <div class="left-triangle"></div>
 </div>
 
 <div th:fragment="recruitment-tab"
