--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/general.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/general.html
@@ -20,19 +20,12 @@
              class="d-inline-block align-top"
              alt="CTSA logo">
     </a>
-    <div class="collapse navbar-collapse  justify-content-center  menu"
-         id="navbarSupportedContent">
-        <!--<a class="mx-5"
-           href="#">Tuyển Dụng</a>
-        <a class="mx-5"
-           href="/ket-qua">Thống Kê</a>
-        <a class="mx-5"
-           href="#">Tuyển Dụng</a>
-        <a class="mx-5"
-           href="#">Thống Kê</a>-->
+    <span class="title-header">Career Trend Suggestions</span>
+    <div class="collapse navbar-collapse  justify-content-center  menu">
     </div>
     <span class="fa-stack">
-            <i class="fa fa-user-circle-o fa-stack-1x"
+            <i class="	fa fa-user-circle-o fa-stack-1x" style="font-size:36px; color:white"></i>
+            <i class="	fa fa-user-circle-o fa-stack-1x"
                style="font-size:36px; color:white"></i>
         </span>
 </nav>
