--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/freshmen/summary.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/freshmen/summary.html
@@ -158,7 +158,8 @@
         $(this).addClass("tab-active")
         $("#stats-tab").removeClass("tab-active")
         $("#recruitment-tab").removeClass("tab-active")
-        getSkillsTrends()
+        getPositionTrend()
+        // getSkillsTrends()
     })
     $("#recruitment-tab").click(function () {
         $(this).addClass("tab-active")
