--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/tab.css
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/tab.css
@@ -152,13 +152,9 @@ body {
 }
 
 .statistic1 {
-    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237114/demo-image/statistic1.png") no-repeat center;
+    background: url(https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237114/demo-image/statistic1.png) no-repeat;
     background-size: 100% 100%;
-}
-
-.statistic2 {
-    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237114/demo-image/statistic2.png") no-repeat center;
-    background-size: 100% 100%;
+    height: 180px;
 }
 
 .modal-content {
@@ -194,4 +190,35 @@ body {
 
 .info-recruitment {
     margin-top: 17%;
+}
+
+.statistic-description {
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    height: 125px;
+    font-size: 2.2em;
+    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1542352746/demo-image/statistic-description.png") no-repeat;
+    background-size: 100% 100%;
+    line-height: 1;
+}
+
+.vertical-middle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: none;
+    width: 100%;
+}
+
+.predict-major {
+    background: url(https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237111/demo-image/result-text.png)
+    no-repeat center;
+    background-size: 100% 100%;
+    min-width: 250px;
+    min-height: 80px;
+    text-align: center;
+    color: rgb(240, 240, 240);
+    font-size: 1.8em;
+    font-weight: bold;
 }
