--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/index.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
         <!-- Company summary detail div -->
         <div class="col-md-6 img-logo">
             <img alt="Ranking Image"
-                 src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541714808/demo-image/slogan-ctsa.png">
+                 src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1542345727/demo-image/slogan-ctsa.png">
         </div>
 
         <div class="col-md-5 mr-3 form-input">
@@ -106,6 +106,11 @@
                                 1
                             </span>
                         </span>- 3 môn bạn tự tin nhất là gì?
+                        <br/>
+                        <span id="additional-questions"
+                              style="display: none; padding-left: 5%; font-style: italic;">
+                            Điểm các môn học đó là...
+                        </span>
                     </span>
                 <br>
                 <div class="role1 hideaway mx-4 pl-4 my-2"
@@ -132,9 +137,8 @@
                      style="border-left-style: dashed; border-width:3px">
 
                     <input type="number"
-                           class="my-2 mx-1"
+                           class="my-2 mx-1 text-right col-md-2"
                            id="highSchoolAverage"
-                           placeholder="Điểm trung bình của bạn..."
                            onkeypress="retrieveAverage(this)"
                            style="width: 300px"
                            step="0.1">
@@ -242,7 +246,7 @@
                 let subjects = response.data
                 subjects.forEach(subject => {
                     $('<button>', {
-                        class: 'btn btn-outline-dark my-2 mx-1 rolebtn',
+                        class: 'btn btn-outline-dark my-2 mx-1 btn-role',
                         value: subject.id,
                         text: subject.vietnamese,
                         onclick: 'chooseSubject(this)'
@@ -258,7 +262,7 @@
                 let positions = response.data
                 positions.forEach(position => {
                     $('<button>', {
-                        class: 'btn btn-outline-dark my-2 mx-1 rolebtn',
+                        class: 'btn btn-outline-dark my-2 mx-1 btn-role',
                         value: position.id,
                         text: position.name,
                         onclick: 'choosePosition(this)'
@@ -283,6 +287,7 @@
         addToTopSubjects(subject, count)
         highSchoolTopInputNames.push(subject.textContent)
         if (count > 2) {
+            $('#additional-questions').show()
             $("#chooseSubjects").slideUp(600)
 
             let subjectsMarks = $('#subjectsMarks')
@@ -314,7 +319,7 @@
         })
 
         $('<button>', {
-            class: 'btn btn-outline-dark my-2 mx-1 selected col-md-2',
+            class: 'btn btn-outline-dark my-2 mx-1 selected col-md-3',
             text: vietnamese,
         }).appendTo(subjectDiv)
 
@@ -323,8 +328,7 @@
             step: '0.1',
             id: 'mark' + subject.weight,
             value: '',
-            class: 'my-2 mx-3 col-md-6',
-            placeholder: 'Điểm của bạn...',
+            class: 'my-2 mx-3 col-md-2 text-right',
             onkeypress: 'retrieveMark(this)',
             style: 'width: 300px'
         }).appendTo(subjectDiv)
