--- a/web-ui/web-v0.7.1/css/tab.css
+++ b/web-ui/web-v0.7.1/css/tab.css
@@ -1,7 +1,8 @@
 body {
   background-color: #ff7d1f !important;
   /* background-color: #fff691 !important; */
-  background: url("https://wallpaperlayer.com/img/2015/4/awesome-yellow-wallpaper-76-120-hd-wallpapers.jpg") no-repeat;
+  background: url("https://wallpaperlayer.com/img/2015/4/awesome-yellow-wallpaper-76-120-hd-wallpapers.jpg")
+    no-repeat;
 }
 
 .left-triangle {
@@ -35,7 +36,8 @@ body {
   /* background: url("./images/background-ctsa.png"); */
   background-position-x: 80%;
   /* background: url("./images/violet-banner.jpg"); */
-  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237103/demo-image/orange-background-banner.jpg") no-repeat;
+  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237103/demo-image/orange-background-banner.jpg")
+    no-repeat;
   background-color: white;
   left: -80px;
   top: 20px;
@@ -46,7 +48,8 @@ body {
 
 .top-right {
   /* background: url("./images/background-ctsa - inverse.png"); */
-  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237103/demo-image/orange-background-banner-flip.jpg") no-repeat;
+  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237103/demo-image/orange-background-banner-flip.jpg")
+    no-repeat;
   /* background: url("./images/orange-background.jpg"); */
   background-position-x: 100%;
   background-color: white;
@@ -84,7 +87,7 @@ body {
   z-index: -1;
 }
 
-#myTab>li>a {
+#myTab > li > a {
   color: rgb(214, 213, 213);
   padding: 10px;
   font-size: 1.4em;
@@ -96,7 +99,7 @@ body {
   /* color: rgb(226, 220, 220) ; */
 }
 
-.tabactive>a {
+.tabactive > a {
   color: #161616 !important;
   font-size: 1.4em;
   font-weight: bold;
@@ -142,7 +145,8 @@ body {
   margin-left: 20px;
 }
 
-.top-icons-left>div>img, .top-icons-right>div>img {
+.top-icons-left > div > img,
+.top-icons-right > div > img {
   height: 110px;
   width: 110px;
 }
@@ -167,7 +171,8 @@ body {
 }
 
 .banner {
-  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237123/demo-image/banner-alternate.png") no-repeat center;
+  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237123/demo-image/banner-alternate.png")
+    no-repeat center;
   max-width: 100%;
   max-height: 100%;
   background-size: contain;
@@ -181,13 +186,11 @@ body {
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   height: 125px;
-  /* z-index: -1; */
-  font-size: 2.5em;
-  /* padding-top: 30px; */
-  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1542352746/demo-image/statistic-description.png") no-repeat;
+  font-size: 2.2em;
+  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1542352746/demo-image/statistic-description.png")
+    no-repeat;
   background-size: 100% 100%;
-  line-height: 1;
-  /* padding: 5% 0; */
+  line-height: 1.3;
 }
 
 .vertical-middle {
@@ -196,20 +199,14 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   background: none;
+  width: 100%;
 }
 
 .statistic1 {
-  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237114/demo-image/statistic1.png") no-repeat;
+  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237114/demo-image/statistic1.png")
+    no-repeat;
   background-size: 100% 100%;
   height: 180px;
-  /* width: 200px; */
-}
-
-.statistic2 {
-  background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237114/demo-image/statistic2.png") no-repeat;
-  background-size: 100% 100%;
-  height: 200px;
-  width: 200px;
 }
 
 .modal-content {
@@ -218,11 +215,6 @@ body {
   border-top-left-radius: 20px !important;
   border-top-right-radius: 20px !important;
 }
-
-/* .pagi-button{
-  color: rgb(240, 240, 240);
-  border: 1px solid #ff7d1f;
-} */
 
 .page-link {
   color: #ff7d1f;
@@ -250,4 +242,16 @@ body {
 
 .info-recruitment {
   margin-top: 17%;
+}
+
+.predict-major {
+  background: url(https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237111/demo-image/result-text.png)
+    no-repeat center;
+  background-size: 100% 100%;
+  min-width: 250px;
+  min-height: 80px;
+  text-align: center;
+  color: rgb(240, 240, 240);
+  font-size: 1.8em;
+  font-weight: bold;
 }
