Add errors handling.

--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/analytics.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/analytics.html
@@ -60,12 +60,10 @@
             <div class="col-md-6">
                 <div class="row  justify-content-center">
                     <div class="col-md-3 statistic1 text-center">
-                        <img
-                                src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237096/demo-image/java.png"
-                                alt="javascript"
-                                height="110"
-                                width="180"
-                        />
+                        <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237096/demo-image/java.png"
+                             alt="javascript"
+                             height="110"
+                             width="180"/>
                     </div>
                     <div class="col-md-6 statistic-description  text-center">
                         <div class="vertical-middle "><b>NodeJS</b></div>
