Integrate changes in Entrance Exam modal.

--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/result.css
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/result.css
@@ -117,9 +117,8 @@ section.range-slider input[type=range]::-moz-focus-outer {
 }
 
 .rangeValues {
-    margin-bottom: 25px;
+    /*margin-bottom: 25px;*/
     width: 70px;
-
 }
 
 .banner-description {
