--- a/web-ui/web-v0.7.1/css/style.css
+++ b/web-ui/web-v0.7.1/css/style.css
@@ -47,6 +47,11 @@ html {
   font-size: 22px;
   transition: 0.3s;
 }
+.sidebar{
+  position: absolute;
+  margin-top:80px;
+  margin-left: 30px;
+}
 
 /* .listjob {
   background-color: white;
